# Gigildadas

./: CMakeLists.txt  Container.c  Container.h  ContainerObject.c  ContainerObject.h  EntryObject.c  EntryObject.h  FileEditor.c  FileEditor.h  Header.c  Header.h  HeaderObject.c  HeaderObject.h  Module.c  README.md  Sections.c  Sections.h  Utils.c  Utils.h  module.c  script.py  test.py
.github/workflows/: build.yml
gigildadas/: container.pyi
gigildas/: container.pyi
src/: Container.c  Container.h  Header.h  Sections.c  Sections.h  Utils.c  Utils.h
